fix gap above footer on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -299,4 +299,23 @@ footer {
 		height: auto;
 	}
 
+	.wrapper {
+	min-height: 100%;
+	position: relative;
+	}
+
+	.body {
+		padding: 0;
+		width: 100%;
+		margin: 0;
+		position: static;
+	}
+
+	footer {
+		position: static;
+		width: 100%;
+		height: auto;
+		border: 1px solid black;
+	}
+
 }
